# pdfbeaver

./: .gitignore  CHANGELOG.md  MANIFEST.in  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  credits.rst  index.rst
docs/tutorials/: 01_quickstart.rst  02_text_redaction.rst  03_vector_graphics.rst
examples/: dark_mode.py  darken.py  redactor.py  trivial.py  vector_optimizer.py
src/pdfbeaver/: __init__.py  api.py  base_state_tracker.py  editor.py  literate_state_tracker.py  optimization.py  registry.py  state_iterator.py  state_tracker.py
src/pdfbeaver/utils/: __init__.py  pdf_conversion.py  pdf_geometry.py
tests/: conftest.py  strategies.py  test_api_coverage.py  test_basic_editing.py  test_core_mechanics.py  test_editor.py  test_examples.py  test_fuzzing.py  test_optimization.py  test_pdf_conversion.py  test_pdf_geometry.py  test_state_iterator.py  test_state_tracker.py  test_visual_smoke.py  test_xobject_recursion.py
