[build-system]
requires = ["setuptools>=65.5", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfbeaver"
dynamic = [ "version" ]
description = "A library for manipulating PDF content streams."
authors = [
    { name = "qooxzoob", email = "154452450+qooxzuub@users.noreply.github.com" }
]
license = "MPL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.8"

dependencies = [
    "pikepdf>=10.0,<11.0",
    "pydantic>=2.0,<3.0",
    "pdfminer.six==20251107",
    "numpy",
]
readme = {file = "README.md", content-type = "text/markdown"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
keywords = ["pdf"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [ "visual" ]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-coverage",
    "hypothesis",
    "black",
    "pylint",
    "pytest-mock",
    "isort",
    "sphinx-rtd-theme",
]

[project.urls]
"Homepage" = "https://github.com/qooxzuub/pdfbeaver"
"Bug Tracker" = "https://github.com/qooxzuub/pdfbeaver/issues"
# "Documentation" = "https://pdfbeaver.readthedocs.io" # not yet

[tool.isort]
profile = "black"

[tool.setuptools.package-data]
"pdfbeaver" = ["py.typed"]

[tool.setuptools_scm]

