[build-system]
requires = ["setuptools>=65.5", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfbeaver"
dynamic = [ "version" ]
description = "A library for manipulating PDF content streams."
authors = [
    { name = "qooxzoob", email = "154452450+qooxzuub@users.noreply.github.com" }
]
license = "MPL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"

dependencies = [
    "pikepdf>=10.0,<11.0",
    "pdfminer.six==20251107",
    "numpy",
]
readme = {file = "README.md", content-type = "text/markdown"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
keywords = ["pdf"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [ "visual" ]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-coverage",
    "hypothesis",
    "black",
    "pylint",
    "pytest-mock",
    "isort",
    "deptry",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "myst-parser",
]

[project.urls]
"Homepage" = "https://github.com/qooxzuub/pdfbeaver"
"Bug Tracker" = "https://github.com/qooxzuub/pdfbeaver/issues"
"Documentation" = "https://pdfbeaver.readthedocs.io"

[tool.isort]
profile = "black"

[tool.setuptools.package-data]
"pdfbeaver" = ["py.typed"]

[tool.setuptools_scm]

[tool.deptry]
known_first_party = ["pdfbeaver"]

[tool.deptry.per_rule_ignores]
DEP002 = ["deptry", "pytest", "pytest-cov", "black", "isort", "pylint", "sphinx",
          "myst-parser", "sphinx-rtd-theme", "pytest-mock", "pytest-coverage", "hypothesis"]
